@@ -19,6 +19,7 @@
 	* added option for keeping auxiliary predicates in output
 	* added option for omitting EDB facts from output
 	* added option for configuring graphviz output (eval/model graph not yet implemented, but partially exists in testsuite)
+	* plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use a "deleter" compiled into the respective plugin (see PluginInterface.h)
 
 2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
